# offeringService

./: .env_example  Dockerfile  Makefile  README.md  config.py  pyproject.toml
offer/: __init__.py  __main__.py  app.py
offer/api/v1/: offers.py
offer/dependencies/: offer_dependencies.py
offer/domain/: offer.py
offer/protocols/: cache_storage.py  weather_service.py
offer/repositories/: redis_repo.py
offer/services/: exceptions.py  offer_service.py  weather_service.py
offer/tests/: conftest.py  test_offer_integrations.py  test_offer_units.py
